2011-06-24  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (curr_insn_transform): Process operator
	duplications.

2011-06-24  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (lra_constraints): Check subreg for equiv init
	insn.

2011-06-23  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-int.h (struct lra_bb_info, lra_bb_info): Remove.

	* lra.c (lra_bb_info, init_bb_info, finish_bb_info): Remove.
	(lra): Remove calls of init_bb_info and finish_bb_info.

	* lra-lives.c (live_regs): Remove.
	(make_hard_regno_born, make_pseudo_live, make_pseudo_dead): Don't
	update live_regs.
	(process_bb_lives): Ditto.  Don't set up lra_bb_info.
	(lra_create_live_ranges): Don't initialize/finalize live_regs.

2011-06-22  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-assign.c (live_range_hard_reg_pseudos): Make it a sparseset.
	(live_range_hard_reg_pseudos, live_range_reload_pseudos): Ditto.
	(init_live_reload_pseudos, finish_live_reload_pseudos): Work with
	the above variables as sparsesets.
	(find_hard_regno_for, spill_for): Ditto.
	(setup_live_pseudos_and_spill_after_equiv_moves): Ditto.

	* Makefile.in (lra-assign.o): Add missed sparseset.h.

2011-06-15  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-assigns.c (live_pseudos_reg_renumber): New array.
	(init_lives): Initialize the array.
	(finish_lives): Free the array.
	(update_lives): Update live_pseudos_reg_renumber.
	(find_hard_regno_for): Use more bitmap_set_bit or bitmap_ior_into.
	(spill_for): Ditto.
	(setup_live_pseudos_and_spill_after_equiv): Ditto.

	* lra-constraints.c (address_substitution): Rename to
	equiv_address_substitution.

2011-06-09  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-spills.c: Don't include toplev.h.

	* lra-eliminations.c: Ditto.

	* lra-lives.c: Ditto.

	* lra-saves.c: Ditto.

	* lra-coalesce.c: Ditto.

	* lra-equivs.c: Ditto.

	* lra.c: Ditto.
	(lra): Skip coalescing after spills and some assignments.  Remove
	live range creation before spills.
