@@ -1,5 +1,13 @@
 2011-06-24  Vladimir Makarov  <vmakarov@redhat.com>
 
+	* lra-constraints.c (extract_loc_address_regs): Add an argument.
+	Don't process the reg as an index reg on the top address level
+	when it is added to the symbol.
+	(extract_address_regs): Pass new argument to
+	extract_loc_address_regs.
+
+2011-06-24  Vladimir Makarov  <vmakarov@redhat.com>
+
 	* lra-constraints.c (curr_insn_transform): Process operator
 	duplications.
 
